fixed the huge text out of box problem

--- a/src/sass/hero/hero-utilities.scss
+++ b/src/sass/hero/hero-utilities.scss
@@ -1,11 +1,12 @@
+:root {
+  --viewHeight: 100vh;
+  --viewWidth: 100vw;
+  --heightPercent: 100%;
+  --widthPercent: 100%;
+}
+
 @mixin boxshadow {
   box-shadow: 2px 0px 33px 4px rgba(255, 223, 1, 1);
   -webkit-box-shadow: 2px 0px 33px 4px rgba(255, 223, 1, 1);
   -moz-box-shadow: 2px 0px 33px 4px rgba(255, 223, 1, 1);
-}
-
-@mixin allimg {
-    height: 50vh;
-    width: 100%;
-    object-fit: cover;
 }
